# wasmgameengine

./: CMakeLists.txt  compile.bat  index.html  run.bat
src/: CMakeLists.txt  asset.c  asset.h  assetdecode.c  assetdecode.h  binding.c  binding.js  camera.c  camera.h  hash.h  hashmap.h  index.html  linalg.c  linalg.h  linkedlist.c  linkedlist.h  main.c  map.h  material.h  mesh.c  mesh.h  model.h  objimport.c  phong.glsl  physics.c  physics.h  player.h  primitives.c  primitives.h  prop.c  prop.h  refpool.c  refpool.h  renderer.c  shader.c  shader.h  skybox.glsl  stringutils.c  terrain.h  texture.c  (+3 more)
src/assetsys/: asset.c  asset.h  assetdecode.c  assetdecode.h  objimport.c  objimport.h  primitives.c  primitives.h
src/environment/: physics.c  prop.c  prop.h  terrain.c
src/math/: geometry.c  geometry.h  linalg.c  linalg.h  linalg_p.c  linalg_p.h  mat4.c  transform.c  transform.h
src/render/: errorassets.c  mesh.c  mesh.h  model.h  ogl.h  renderer.c  renderer.h  shader.c  shader.h  texture.c  vertex.c  vertex.h
src/util/: hash.c  hashmap.c  log.c  log.h  map.c  refhashmap.c  refhashmap.h  stringutils.h
